# fastapi-template

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: main.py
tests/: test_main.py
